--- a/index.html
+++ b/index.html
@@ -31,35 +31,35 @@
 
           <h1>My EWU Portal | Frank Kepler</h1>
 
-          <!-- Tabs -->
-          <dl class="tabs" data-tab>
-            <dd class="active"><a href="#panel2-1">Courses</a></dd>
-            <dd><a href="#panel2-2">Financial</a></dd>
-            <dd><a href="#panel2-3">Canvas</a></dd>
-            <dd><a href="#panel2-4">TBD</a></dd>
-          </dl>
+<!-- Tabs Navigation-->
+                  <dl class="tabs data-tab>
+                    <dd class="active"><a href="#panel2-1"><h6>Courses</h6></a></dd>
+                    <dd><a href="#panel2-2"><h6>Financial</h6></a></dd>
+                    <dd><a href="#panel2-3"><h6>Canvas</h6></a></dd>
+                    <dd><a href="#panel2-4"><h6>TBD</h6></a></dd>
+                  </dl>
 
-          <div class="tabs-content">
-<!-- Courses -->
-            <div class="content active" id="panel2-1">
-              <p>First panel content goes here...</p>
-            </div>
+                  <div class="tabs-content">
 
-<!-- Financial -->
-            <div class="content" id="panel2-2">
-              <p>Second panel content goes here...</p>
-            </div>
+<!-- Courses -->  <div class="content active" id="panel2-1">
+                      <p>First panel content goes here...
+                  </div>
 
-<!-- Canvas -->
-            <div class="content" id="panel2-3">
-              <p>Third panel content goes here...</p>
-            </div>
 
-<!-- TDB -->
-            <div class="content" id="panel2-4">
-              <p>Fourth panel content goes here...</p>
-            </div>
-          </div>
+<!-- Financial -->  <div class="content" id="panel2-2">
+                      <p>Second panel content goes here...</p>
+                    </div>
+
+
+<!-- Canvas -->     <div class="content" id="panel2-3">
+                      <p>Third panel content goes here...</p>
+                    </div>
+
+
+<!-- TDB -->        <div class="content" id="panel2-4">
+                      <p>Fourth panel content goes here...</p>
+                    </div>
+                  </div>
 
 
 
