--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1>My EWU Portal | Frank Kepler</h1>
 
 <!-- Tabs Navigation-->
-                  <dl class="tabs data-tab>
+                  <dl class="tabs data-tab">
                     <dd class="active"><a href="#panel2-1"><h6>Courses</h6></a></dd>
                     <dd><a href="#panel2-2"><h6>Financial</h6></a></dd>
                     <dd><a href="#panel2-3"><h6>Canvas</h6></a></dd>
@@ -42,7 +42,7 @@
                   <div class="tabs-content">
 
 <!-- Courses -->  <div class="content active" id="panel2-1">
-                      <p>First panel content goes here...
+                      <p>First panel content goes here...</p>
                   </div>
 
 
