New Accordion Nav

--- a/index.html
+++ b/index.html
@@ -32,34 +32,114 @@
           <h1>My EWU Portal | Frank Kepler</h1>
 
 <!-- Tabs Navigation-->
-                  <dl class="tabs data-tab">
-                    <dd class="active"><a href="#panel2-1"><h6>Courses</h6></a></dd>
-                    <dd><a href="#panel2-2"><h6>Financial</h6></a></dd>
-                    <dd><a href="#panel2-3"><h6>Canvas</h6></a></dd>
-                    <dd><a href="#panel2-4"><h6>TBD</h6></a></dd>
-                  </dl>
-
-                  <div class="tabs-content">
-
-<!-- Courses -->  <div class="content active" id="panel2-1">
-                      <p>First panel content goes here...</p>
-                  </div>
+                <dl class="accordion" data-accordion>
 
 
-<!-- Financial -->  <div class="content" id="panel2-2">
-                      <p>Second panel content goes here...</p>
+<!-- eLearning --><dd>
+                    <a href="#panel1" class="blue">eLearning</a>
+                    <div id="panel1" class="content active">
+                      <dl class="tabs" data-tab>
+                        <dd class="active"><a href="#panel2-1">Tab 1</a></dd>
+                        <dd><a href="#panel2-2">Tab 2</a></dd>
+                        <dd><a href="#panel2-3">Tab 3</a></dd>
+                        <dd><a href="#panel2-4">Tab 4</a></dd>
+                      </dl>
+                      <div class="tabs-content">
+                        <div class="content active" id="panel2-1">
+                          <p>First panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-2">
+                          <p>Second panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-3">
+                          <p>Third panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-4">
+                          <p>Fourth panel content goes here...</p>
+                        </div>
+                      </div>
                     </div>
+                  </dd>
+                  
 
-
-<!-- Canvas -->     <div class="content" id="panel2-3">
-                      <p>Third panel content goes here...</p>
+<!-- Courses -->  <dd>
+                    <a href="#panel2" class="blue">Courses</a>
+                    <div id="panel2" class="content active">
+                      <dl class="tabs" data-tab>
+                        <dd class="active"><a href="#panel2-1">Tab 1</a></dd>
+                        <dd><a href="#panel2-2">Tab 2</a></dd>
+                        <dd><a href="#panel2-3">Tab 3</a></dd>
+                        <dd><a href="#panel2-4">Tab 4</a></dd>
+                      </dl>
+                      <div class="tabs-content">
+                        <div class="content active" id="panel2-1">
+                          <p>First panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-2">
+                          <p>Second panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-3">
+                          <p>Third panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-4">
+                          <p>Fourth panel content goes here...</p>
+                        </div>
+                      </div>
                     </div>
+                  </dd>
 
 
-<!-- TDB -->        <div class="content" id="panel2-4">
-                      <p>Fourth panel content goes here...</p>
+<!-- Financial -->  <dd>
+                    <a href="#panel3" class="blue">Financial</a>
+                    <div id="panel3" class="content active">
+                      <dl class="tabs" data-tab>
+                        <dd class="active"><a href="#panel2-1">Tab 1</a></dd>
+                        <dd><a href="#panel2-2">Tab 2</a></dd>
+                        <dd><a href="#panel2-3">Tab 3</a></dd>
+                        <dd><a href="#panel2-4">Tab 4</a></dd>
+                      </dl>
+                      <div class="tabs-content">
+                        <div class="content active" id="panel2-1">
+                          <p>First panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-2">
+                          <p>Second panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-3">
+                          <p>Third panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-4">
+                          <p>Fourth panel content goes here...</p>
+                        </div>
+                      </div>
                     </div>
-                  </div>
+                  </dd>
+
+<!-- Social -->   <dd>
+                    <a href="#panel4" class="blue">Social</a>
+                    <div id="panel4" class="content active">
+                      <dl class="tabs" data-tab>
+                        <dd class="active"><a href="#panel2-1">Tab 1</a></dd>
+                        <dd><a href="#panel2-2">Tab 2</a></dd>
+                        <dd><a href="#panel2-3">Tab 3</a></dd>
+                        <dd><a href="#panel2-4">Tab 4</a></dd>
+                      </dl>
+                      <div class="tabs-content">
+                        <div class="content active" id="panel2-1">
+                          <p>First panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-2">
+                          <p>Second panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-3">
+                          <p>Third panel content goes here...</p>
+                        </div>
+                        <div class="content" id="panel2-4">
+                          <p>Fourth panel content goes here...</p>
+                        </div>
+                      </div>
+                    </div>
+                  </dd>
 
 
 
